# browser-secure-manager

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  app_config.py  main.py  pyproject.toml
app/: app_service.py  fonts.py  i18n.py  i18n_strings.py  logging_config.py  session_process.py
browser_backends/: base.py  browser_discovery.py  chromium_bookmarks.py  chromium_extensions.py  selenium_backend.py
db/: backups.py  browsers.py  config.py  fingerprints.py  mappers.py  profile_cache.py  proxies.py  schema.py  sessions.py  settings.py  storage.py
docs/: fingerprint_boundaries.md
gui/: app_settings_dialog.py  browser_config_row.py  fingerprint_config_dialog.py  fingerprint_profile_row.py  main_window.py  proxy_config_row.py  proxy_csv.py  session_row_widget.py  session_settings_dialog.py  session_status.py
models/: browser_config.py  fingerprint_config.py  fingerprint_generator.py  fingerprint_profile.py  fingerprint_summary.py  proxy_config.py  session_entry.py
services/: proxy_tester.py
tests/: test_app_config.py  test_backup_storage.py  test_browser_discovery.py  test_chromium_bookmarks.py  test_fingerprint_boundaries.py  test_fingerprint_config.py  test_fingerprint_generator.py  test_fingerprint_profile_row.py  test_fingerprint_storage.py  test_logging_config.py  test_profile_cache.py  test_selenium_fingerprint_script.py  test_session_settings_dialog.py
translations/: app_ar.qm  app_ar.ts  app_bg.qm  app_bg.ts  app_bn.qm  app_bn.ts  app_cs.qm  app_cs.ts  app_da.qm  app_da.ts  app_de.qm  app_de.ts  app_el.qm  app_el.ts  app_es.qm  app_es.ts  app_fa.qm  (+47 more)
(+39 files in other folders)
