[project]
name = "secure-browser"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "selenium>=4.20",
    "tzdata>=2026.1; platform_system == 'Windows'",
    "websocket-client>=1.9",
]

[project.scripts]
secure-browser = "main:main"

[project.gui-scripts]
secure-browser-gui = "main:main"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.12",
]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
/(
    \.venv
  | \.git
  | \.idea
  | __pycache__
  | logs
  | profiles
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".idea",
    ".venv",
    "__pycache__",
    "logs",
    "profiles",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",
    "B905",
    "UP031",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "app",
    "browser_backends",
    "db",
    "gui",
    "models",
    "services",
]
